<resources>
    <string name="app_name">RootTools</string>
    <string name="app_ver" formatted="false">ver %s</string>
    <string name="app_debug">(DEBUG)</string>
    <string name="app_help">RootTools Help</string>
    <string name="copyright">Copyright© Rarnu 2014.</string>
    <string name="sysapp_name">App Detail</string>
    <string name="sysapp_select">Choose App</string>
    <string name="settings">Settings</string>
    <string name="google">Google Framework</string>
    <string name="runtime">Android Runtime</string>
    <string name="cat_settings">Settings</string>
    <string name="cat_global">Global</string>
    <string name="cat_system">System</string>
    <string name="cat_apps">Applications</string>
    <string name="cat_memory">Memory &amp; Storage</string>
    <string name="cat_terminal">Misc</string>
    <string name="cat_other">Network</string>
    <string name="cat_file">Filesystem</string>
    <string name="cat_support">Support</string>
    <string name="short_about">About</string>
    <string name="short_feedback">Feedback</string>
    <string name="short_recommand">App Recommand</string>
    <string name="short_recommand_with_path">RootTools &gt; App Recommand</string>
    <string name="short_share">Share</string>
    <string name="component_list">Component Status</string>
    <string name="operation_result">Result</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_with_path">RootTools &gt; Feedback</string>
    <string name="current_dir">Current Directory</string>
    <string name="egg">Do you like eggs?</string>
    <string name="app_push">Recommand</string>
    <string name="host_add">Add Hosts</string>
    <string name="scan_media">Scan Media</string>
    <string name="remote_adb">Remote ADB</string>
    <string name="change_boot_music">Change Boot Music</string>
    <string name="clean_htc_rom">Clean ROM</string>
    <string name="clean_htc_rom_with_path">RootTools &gt; Clean ROM</string>
    <string name="clean_htc_rom_finish">Clean ROM finished.</string>
    <string name="busybox">System Components</string>
    <string name="busybox_with_path">RootTools &gt; System Components</string>
    <string name="settings_with_path">RootTools &gt; Settings</string>
    <string name="check_update">Check Update</string>
    <string name="about">About</string>
    <string name="about_with_path">RootTools &gt; About</string>
    <string name="func_theme_title">White Theme</string>
    <string name="func0_title">Show Float Window</string>
    <string name="func1">Add/Remove\nSystem Apps</string>
    <string name="func1_title">System App</string>
    <string name="func1_title_with_path">RootTools &gt; System App</string>
    <string name="func2">Enable/Disable\nApplications</string>
    <string name="func2_title">Availability</string>
    <string name="func2_title_with_path">RootTools &gt; Availability</string>
    <string name="func3">Backup Data</string>
    <string name="func3_title">Backup Data</string>
    <string name="func3_title_with_path">RootTools &gt; Backup Data</string>
    <string name="func3p">Restore Data</string>
    <string name="func3p_title">Restore Data</string>
    <string name="func3p_title_with_path">RootTools &gt; Restore Data</string>
    <string name="func4">Enable/Disable\nComponents</string>
    <string name="func4_title">Components</string>
    <string name="func4_title_with_path">RootTools &gt; Components</string>
    <string name="func5">Clean Memory</string>
    <string name="func5_title">Clean Memory</string>
    <string name="func5_title_with_path">RootTools &gt; Clean Memory</string>
    <string name="func6">Clean Cache</string>
    <string name="func6_title">Clean Cache</string>
    <string name="func6_title_with_path">RootTools &gt; Clean Cache</string>
    <string name="func7">Edit Hosts</string>
    <string name="func7_title">Edit Hosts</string>
    <string name="func7_title_with_path">RootTools &gt; Edit Hosts</string>
    <string name="func8">ROOT\nBusybox</string>
    <string name="func8_title">System Components</string>
    <string name="func9">Miscellaneous</string>
    <string name="func9_func">Miscellaneous</string>
    <string name="func_terminal">Terminal Emulator</string>
    <string name="func_terminal_with_path">RootTools &gt; Terminal Emulator</string>
    <string name="func_hardupdate">Force Update</string>
    <string name="func_hardupdate_with_path">RootTools &gt; Force Update</string>
    <string name="func_diskinfo">Disk Information</string>
    <string name="func_diskinfo_with_path">RootTools &gt; Disk Information</string>
    <string name="func_filesystem">File Manager</string>
    <string name="func_filesystem_with_path">RootTools &gt; File Manager</string>
    <string name="func_batch_app">Batch Apps</string>
    <string name="func_batch_app_with_path">RootTools &gt; Batch Apps</string>
    <string name="func_firewall">Firewall</string>
    <string name="func_firewall_with_path">RootTools &gt; Firewall</string>
    <string name="func_comp_list">Full Management</string>
    <string name="func_auto_boot">Autoboot</string>
    <string name="func_google">Google Framework</string>
    <string name="func_google_with_path">RootTools &gt; Google Framework</string>
    <string name="func_remained_files">Remained Files</string>
    <string name="func_remained_files_with_path">RootTools &gt; Remained Files</string>
    <string name="func_fonts">Fonts</string>
    <string name="func_fonts_with_path">RootTools &gt; Fonts</string>
    <string name="func_password">Password Manager</string>
    <string name="func_password_with_path">RootTools &gt; Password Manager</string>
    <string name="func_replace_files">Replace Files</string>
    <string name="func_replace_files_with_path">RootTools &gt; Replace Files</string>
    <string name="func_build_prop">Build.Properties</string>
    <string name="func_build_prop_with_path">RootTools &gt; Build.Properties</string>
    <string name="func_color_temp">Color Temperature</string>
    <string name="func_color_temp_with_path">RootTools &gt; Color Temperature</string>
    <string name="func_file_transfer">File Transfer</string>
    <string name="func_file_transfer_with_path">RootTools &gt; FileTransfer</string>
    <string name="func_runtime">Runtime</string>
    <string name="func_runtime_with_path">RootTools &gt; Runtime</string>
    <string name="backup_data">Backup Apps\' Data</string>
    <string name="restore_data">Restore Apps\' Data</string>
    <string name="check_network_status">Network Status</string>
    <string name="hint">Hint</string>
    <string name="close">Close</string>
    <string name="unknown">Unknown</string>
    <string name="na">N/A</string>
    <string name="version">Version</string>
    <string name="refresh">Refresh</string>
    <string name="pool">Pool</string>
    <string name="help">Help</string>
    <string name="help_with_path">RootTools &gt; Help</string>
    <string name="save">Save</string>
    <string name="revert">Revert</string>
    <string name="send">Send</string>
    <string name="clean">Clean</string>
    <string name="search">Search</string>
    <string name="uplevel">Up</string>
    <string name="send_ctrl">Send Ctrl</string>
    <string name="send_fn">Send FN</string>
    <string name="ctrl">Ctrl</string>
    <string name="fn">FN</string>
    <string name="toggle_input_method">Toggle Input Method</string>
    <string name="add_ignore">Ignore</string>
    <string name="remove_ignore">Unignore</string>
    <string name="how_to_use">How to use</string>
    <string name="build_team">Build Team</string>
    <string name="system_fitable">Compatibility</string>
    <string name="testing">Testing ...</string>
    <string name="banned">Operating, UI is locked</string>
    <string name="searching">Searching ...</string>
    <string name="loading">Loading, please wait...</string>
    <string name="sending">Sending, please wait...</string>
    <string name="button_delete">Delete</string>
    <string name="button_add_to_clean_list">Add to Clean List</string>
    <string name="button_remove_from_clean_list">Remove from Clean List</string>
    <string name="textview_info">Information</string>
    <string name="textview_path">APK</string>
    <string name="textview_odex">ODEX</string>
    <string name="textview_filesize">App Size</string>
    <string name="textview_datapath">Data Path</string>
    <string name="textview_datasize">Data Size</string>
    <string name="textview_library">Shared User ID</string>
    <string name="textview_permission">Permissions</string>
    <string name="allow_delete_level0">Allow Delete System Apps</string>
    <string name="backup_before_delete">Backup Before Delete</string>
    <string name="also_delete_data">Remove Data When Deleting App</string>
    <string name="custom_app_clean">Custom ROM Clean</string>
    <string name="delete_fail">Fail to delete system app</string>
    <string name="delete_readonly">System is mounted readonly and cannot delete system app</string>
    <string name="mount_fail">Cannot remount writable, please check the ROOT permission</string>
    <string name="already_sdcard_root">Already in root folder, press "Back" one more time for cloing it</string>
    <string name="delete_android_app">This app is necessary for Android System. Delete it will cause system exceptions.
        Are you sure to delete it?
    </string>
    <string name="delete_google_app">This app is necessary for Google Services. Are you sure to delete it?</string>
    <string name="delete_htc_app">This app is necessary for HTC Sense. Are you sure to delete it?</string>
    <string name="delete_system_app">Are you sure to delete this system app? Please keep it if you are not sure how it
        works.
    </string>
    <string name="install_apk" formatted="false">Are you sure to install %s into system?</string>
    <string name="installing_system_app">Installing system app, please wait...</string>
    <string name="installing_updating_app">Installing app, please wait...</string>
    <string name="install_ok">Install system app finished</string>
    <string name="install_fail">Install system app failed</string>
    <string name="install_update_apk_ok">Install app finished</string>
    <string name="install_update_apk_fail">Install app failed</string>
    <string name="no_sdcard_found">No SDCard found, please check the SDCard and try agagin.</string>
    <string name="pid">PID:</string>
    <string name="memory">Used:</string>
    <string name="user">User:</string>
    <string name="c_kill_warning">Be careful that kill this process may cause system unstable or other problems.
    </string>
    <string name="kill">Kill</string>
    <string name="download">Download</string>
    <string name="team_members">Team Members</string>
    <string name="team_project">Project Source</string>
    <string name="team_compile">How to Build</string>
    <string name="team_github_link">Visit our Github</string>
    <string name="update_log">Update Log</string>
    <string name="update_title" formatted="false">Version: %s (Size: %s)</string>
    <string name="unofficial_no_update">Not an official version, cannot update</string>
    <string name="password_origin">Origin Password</string>
    <string name="password_new">New Password</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="password_click_input">Click for Input</string>
    <string name="pdetail_name">Name</string>
    <string name="pdetail_account">Account</string>
    <string name="pdetail_password">Password</string>
    <string name="pdetail_memo">Memo</string>
    <string name="pdetail_name_hint">Where the account come from</string>
    <string name="pdetail_account_hint">Account for login</string>
    <string name="pdetail_password_hint">Password for login</string>
    <string name="pdetail_memo_hint">Additional information, like security question and answer</string>
</resources>