<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/tvName"
            android:layout_width="80dip"
            android:layout_height="48dip"
            android:textColor="?android:attr/textColorPrimary"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="8dip"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/pdetail_name"
            />

    <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginTop="8dip"
            android:layout_marginRight="8dip"
            android:singleLine="true"
            android:maxLines="1"
            android:hint="@string/pdetail_name_hint"
            android:layout_toRightOf="@+id/tvName" />

    <TextView
            android:id="@+id/tvAccount"
            android:layout_width="80dip"
            android:layout_height="48dip"
            android:textColor="?android:attr/textColorPrimary"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="8dip"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/pdetail_account"
            android:layout_below="@+id/tvName"
            />

    <EditText
            android:id="@+id/etAccount"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginTop="8dip"
            android:layout_marginRight="8dip"
            android:singleLine="true"
            android:maxLines="1"
            android:hint="@string/pdetail_account_hint"
            android:layout_toRightOf="@+id/tvAccount"
            android:layout_below="@+id/etName" />

    <TextView
            android:id="@+id/tvPassword"
            android:layout_width="80dip"
            android:layout_height="48dip"
            android:textColor="?android:attr/textColorPrimary"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="8dip"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/pdetail_password"
            android:layout_below="@+id/tvAccount"
            />

    <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginTop="8dip"
            android:layout_marginRight="8dip"
            android:singleLine="true"
            android:maxLines="1"
            android:hint="@string/pdetail_password_hint"
            android:layout_toRightOf="@+id/tvPassword"
            android:layout_below="@+id/etAccount" />

    <TextView
            android:id="@+id/tvMemo"
            android:layout_width="80dip"
            android:layout_height="48dip"
            android:textColor="?android:attr/textColorPrimary"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="8dip"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/pdetail_memo"
            android:layout_below="@+id/tvPassword"
            />

    <EditText
            android:id="@+id/etMemo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dip"
            android:layout_marginRight="8dip"
            android:gravity="left|top"
            android:hint="@string/pdetail_memo_hint"
            android:layout_toRightOf="@+id/tvMemo"
            android:layout_below="@+id/etPassword" />

</RelativeLayout>