<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/tvOriPwd"
            android:layout_width="120dip"
            android:layout_height="48dip"
            android:text="@string/password_origin"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="8dip"
            android:gravity="left|center_vertical"
            />

    <Button
            android:id="@+id/btnOriPwd"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginTop="8dip"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_toRightOf="@+id/tvOriPwd"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="8dip"
            android:text="@string/password_click_input" />

    <TextView
            android:id="@+id/tvNewPwd"
            android:layout_width="120dip"
            android:layout_height="48dip"
            android:text="@string/password_new"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="8dip"
            android:gravity="left|center_vertical"
            android:layout_below="@+id/tvOriPwd"
            />

    <Button
            android:id="@+id/btnNewPwd"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginTop="8dip"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_toRightOf="@+id/tvNewPwd"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="8dip"
            android:layout_below="@+id/btnOriPwd"
            android:text="@string/password_click_input" />

    <TextView
            android:id="@+id/tvRepeatPwd"
            android:layout_width="120dip"
            android:layout_height="48dip"
            android:text="@string/password_repeat"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="8dip"
            android:gravity="left|center_vertical"
            android:layout_below="@+id/tvNewPwd"
            />

    <Button
            android:id="@+id/btnRepeatPwd"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginTop="8dip"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_toRightOf="@+id/tvRepeatPwd"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="8dip"
            android:layout_below="@+id/btnNewPwd"
            android:text="@string/password_click_input" />

</RelativeLayout>